<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/et_title" />

    <TextView
        android:text="@string/tv_title_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_alignBaseline="@+id/et_title"
        android:layout_alignBottom="@+id/et_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/et_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/et_notitie"
        android:layout_above="@+id/btn_save"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/et_notitie_str"
        android:singleLine="false"
        android:maxLength="1000" />

    <Button
        android:text="@string/btn_cancel_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tv_title" />

    <Button
        android:text="@string/btn_save_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btn_delete_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:id="@+id/btn_delete"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>